[tool.poetry]
name = "ytm2spt"
version = "0.1.0"
description = "YouTube Music to Spotify Playlist Converter"
authors = ["Abhishek M J <abhishekmj303@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["youtubemusic", "youtube", "spotify", "playlist", "converter"]
repository = "https://github.com/abhishekmj303/ytm2spt"

classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Issues" = "https://github.com/abhishekmj303/ytm2spt/issues"

[tool.poetry.dependencies]
python = "^3.11"
Levenshtein = "^0.25.0"
requests = "^2.31.0"
spotipy = "^2.23.0"
thefuzz = "^0.22.1"
ytmusicapi = "^1.5.4"

[tool.poetry.scripts]
ytm2spt = "src.ytm2spt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
